tests/base/invalid/List_CompileFail_1.whiley
import whiley.lang.*:*

void System::main([string] args):
     x = 1
     a2[0] = x
